# ofdb-cli

./: Cargo.toml  README.md
examples/: archive_entries.rs  import_from_csv.rs  update_custom_links.rs
src/: csv.rs  import.rs  lib.rs  main.rs  review.rs
tests/: import-example.csv  review-example.csv  update-example.csv  update-patch-example.csv  update-patch.csv
