[package]
name = "ofdb-cli"
version = "0.0.0"
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2021"

[[bin]]
name = "ofdb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
csv = "1"
email-address-parser = "*"
log = "0.4"
pretty_env_logger = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
thiserror = "1"
uuid = "1.1"

# Open FairDB dependencies
ofdb-boundary = { version = "0.11", features = [ "extra-derive" ] }
ofdb-core = "*"
ofdb-entities = { version = "0.11", features = [ "url" ] }
ofdb-gateways = "*"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "blocking", "json", "cookies"]

[dev-dependencies]
env_logger = "*"
ofdb-entities = "*"
url = { version = "2.2", features = [ "serde" ] }
uuid = { version = "1.1", features = [ "serde" ] }

[patch.crates-io]
ofdb-core     = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.11.0" }
ofdb-boundary = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.11.0" }
ofdb-entities = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.11.0" }
ofdb-gateways = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.11.0" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
