[package]
name = "ofdb-cli"
version = "0.0.0"
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2021"
rust-version = "1.69.0"

[[bin]]
name = "ofdb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
csv = "1"
email-address-parser = "1"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
thiserror = "1"
uuid = "1.3"

# Open FairDB dependencies
ofdb-boundary = { version = "0.12", features = [ "extra-derive" ] }
ofdb-core = "=0.0.0"
ofdb-entities = { version = "0.12", features = [ "url" ] }
ofdb-gateways = "=0.0.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "blocking", "json", "cookies"]

[dev-dependencies]
env_logger = "0.10"
ofdb-entities = "0.12"
url = { version = "2.3", features = [ "serde" ] }
uuid = { version = "1.3", features = [ "serde" ] }

[patch.crates-io]
ofdb-core     = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.12.4" }
ofdb-boundary = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.12.4" }
ofdb-entities = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.12.4" }
ofdb-gateways = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.12.4" }

[patch.crates-io.geocoding]
# TODO: use upstream as soon as https://github.com/georust/geocoding/pull/58 is merged.
git = "https://github.com/slowtec/geocoding"
branch = "remove-reqwest-default-tls-feature"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
