[package]
name = "ofdb-cli"
version = "0.0.0"
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2021"
rust-version = "1.71.0"

[[bin]]
name = "ofdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
csv = "1.2"
email-address-parser = "2.0"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
uuid = "1.4"

# Open FairDB dependencies
ofdb-boundary = { version = "0.12", features = [ "extra-derive" ] }
ofdb-core = "=0.0.0"
ofdb-entities = { version = "0.12", features = [ "url" ] }
ofdb-gateways = "=0.0.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "blocking", "json", "cookies"]

[dev-dependencies]
env_logger = "0.10"
ofdb-entities = "0.12"
url = { version = "2.4", features = [ "serde" ] }
uuid = { version = "1.4", features = [ "serde" ] }

[patch.crates-io]
ofdb-core     = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.12.5" }
ofdb-boundary = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.12.5" }
ofdb-entities = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.12.5" }
ofdb-gateways = { git = "https://github.com/kartevonmorgen/openfairdb", rev = "v0.12.5" }

[patch.crates-io.geocoding]
# TODO: use upstream as soon as https://github.com/georust/geocoding/pull/58 is merged.
git = "https://github.com/slowtec/geocoding"
branch = "remove-reqwest-default-tls-feature"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
